Got the weird scroll thing to stop guess the commented code seems to have been affecting it. But so did using overflow-y: hidden. Not sure what that's about

--- a/sass/pages/_single-product.scss
+++ b/sass/pages/_single-product.scss
@@ -74,10 +74,11 @@
 				background-color: #555;
 
 				display: flex;
-				// overflow-x: scroll;
-				// scrollbar-width: none;
+				overflow-x: scroll;
+				overflow-y: hidden;
+				scrollbar-width: none;
 
-				// &::-webkit-scrollbar{display: none;}
+				&::-webkit-scrollbar{display: none;}
 
 				.thumb{
 
